<resources>
    <string name="app_name">DemoProject</string>


    <string name="level_1">Beginner</string>
    <string name="level_2">Easy</string>
    <string name="level_3">Medium</string>
    <string name="level_4">Hard</string>
    <string name="level_5">Ex.Hard</string>


    <string name="time_1">30 Seconds</string>
    <string name="time_2">45 Seconds</string>
    <string name="time_3">60 Seconds</string>
    <string name="time_4">75 Seconds</string>
    <string name="time_5">90 Seconds</string>
</resources>
