<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/margin_20">

    <Button
        android:id="@+id/btn_time_1"
        style="@style/ButtonNoAllCap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_5"
        android:text="@string/time_1" />

    <Button
        android:id="@+id/btn_time_2"
        style="@style/ButtonNoAllCap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_5"
        android:text="@string/time_2" />

    <Button
        android:id="@+id/btn_time_3"
        style="@style/ButtonNoAllCap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_5"
        android:text="@string/time_3" />

    <Button
        android:id="@+id/btn_time_4"
        style="@style/ButtonNoAllCap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_5"
        android:text="@string/time_4" />

    <Button
        android:id="@+id/btn_time_5"
        style="@style/ButtonNoAllCap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_5"
        android:text="@string/time_5" />

</LinearLayout>