<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="@dimen/margin_20"
    android:orientation="vertical">

    <Button
        style="@style/ButtonNoAllCap"
        android:id="@+id/btn_level_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_5"
        android:text="@string/level_1" />

    <Button
        style="@style/ButtonNoAllCap"
        android:id="@+id/btn_level_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_5"
        android:text="@string/level_2" />

    <Button
        style="@style/ButtonNoAllCap"
        android:id="@+id/btn_level_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_5"
        android:text="@string/level_3" />

    <Button
        style="@style/ButtonNoAllCap"
        android:id="@+id/btn_level_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_5"
        android:text="@string/level_4" />

    <Button
        style="@style/ButtonNoAllCap"
        android:id="@+id/btn_level_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_5"
        android:text="@string/level_5" />

</LinearLayout>